--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,37 @@
         <maven.compiler.target>11</maven.compiler.target>
         <exec.mainClass>com.mycompany.persitenciatransaccional.PersitenciaTransaccional</exec.mainClass>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.oracle.ojdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>19.3.0.0</version>
+            <exclusions>
+                <exclusion>
+                <groupId>com.oracle.database.ha</groupId>
+                <artifactId>simplefan</artifactId>
+                </exclusion>
+                <exclusion>
+                <groupId>com.oracle.database.ha</groupId>
+                <artifactId>ons</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+    </dependencies>
+
+  <build>
+  <plugins>
+    <plugin>
+      <groupId>org.codehaus.mojo</groupId>
+      <artifactId>exec-maven-plugin</artifactId>
+      <version>1.6.0</version>
+      <configuration>
+        <environmentVariables>
+          <USER_DB>POLI</USER_DB>
+        </environmentVariables>
+      </configuration>
+    </plugin>
+  </plugins>
+</build>
 </project>
