--- a/pom.xml
+++ b/pom.xml
@@ -18,15 +18,20 @@
             <artifactId>ojdbc8</artifactId>
             <version>19.3.0.0</version>
             <exclusions>
-                <exclusion>
-                <groupId>com.oracle.database.ha</groupId>
+              <exclusion>
+                <groupId>com.oracle.ojdbc</groupId>
                 <artifactId>simplefan</artifactId>
-                </exclusion>
-                <exclusion>
-                <groupId>com.oracle.database.ha</groupId>
+              </exclusion>
+              <exclusion>
+                <groupId>com.oracle.ojdbc</groupId>
                 <artifactId>ons</artifactId>
-                </exclusion>
+              </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20090211</version>
         </dependency>
     </dependencies>
 
